# silero-vad-rust

./: Cargo.toml  README.md
src/: lib.rs
src/silero_vad/: mod.rs  model.rs  utils_vad.rs
src/silero_vad/data/: mod.rs
tests/: test_basic.rs
