[package]
name = "silero-vad-rust"
version = "0.1.0"
edition = "2024"

[features]
default = ["audio-wav"]
audio-wav = ["hound"]
serde-support = ["serde"]

[dependencies]
# Safe bindings for ONNX Runtime 1.22
ort = { version = "2.0.0-rc.10", features = ["load-dynamic", "ndarray"] }
# n-dimensional array math with slicing and views (kept in sync with ort)
ndarray = "0.16.1"
# Flexible concrete Error type for ergonomic error handling
anyhow = "1.0.100"
# derive(Error) for strongly typed error enums
thiserror = "2.0.17"
# WAV encoder/decoder for PCM audio
hound = { version = "3.5.1", optional = true }
# Serialization/deserialization framework with derive macros
serde = { version = "1.0.228", features = ["derive"], optional = true }

[dev-dependencies]
# Approximate floating point comparisons for tests
approx = "0.5.1"
